--- a/public/nav-footer.css
+++ b/public/nav-footer.css
@@ -3,6 +3,7 @@
 .navbar-background {
     background-color: var(--secondary-background);
     position: fixed;
+    z-index: 999;
     top: 0;
     left: 0;
     height: 3rem;
