--- a/views/display-recipes.ejs
+++ b/views/display-recipes.ejs
@@ -34,7 +34,7 @@
                                         <% if( typeof users !='undefined' ) { %>
                                             <% let username='"deleted user"' ; users.forEach(user=> { if(user._id ==
                                                 recipe.created_by){ username = user.username}});%>
-                                                <p>Created by <%= username %>
+                                                <p id="created-by">Created by <%= username %>
                                                 </p>
                                                 <% } %>
                                     </div>
