--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
     <ul class="flexcontainer-navbar" data-visible="false">
         <li class="nav-item">
             <a href="/" class="nav-link">
-                <span class="link-text">Home</span>
+                <span class="link-text">All Recipes</span>
             </a>
         </li>
         <li class="nav-item">
