--- a/public/style.css
+++ b/public/style.css
@@ -29,7 +29,7 @@ h2 {
     font-size: clamp(1.5rem, 8vw, 2.3rem);
 }
 
-p {
+p, label, span {
     font-size: clamp(1.2rem, 8vw, 2rem);
     margin: 0;
 }
