--- a/public/display-recipeStyle.css
+++ b/public/display-recipeStyle.css
@@ -32,7 +32,7 @@
     background-color: rgb(36, 126, 66);
     ;
     border: none;
-    border-radius: .2em;
+    border-radius: .2rem;
     width: 10rem;
     padding: 0.5rem;
     color: whitesmoke;
@@ -81,7 +81,7 @@
         width: 80%;
         margin: 2rem auto;
         border: 1px solid var(--border);
-        border-radius: .5em;
+        border-radius: .5rem;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
     }
 
@@ -96,7 +96,7 @@
     }
 
     .recipe-info {
-        margin-left: 2em;
+        margin-left: 2rem;
     }
 
     .recipe-actions {
