--- a/public/display-recipesStyle.css
+++ b/public/display-recipesStyle.css
@@ -1,34 +1,34 @@
 .grid-container-recipes{
     display: grid;
-    gap: .7em;
-    margin: 1em;
+    gap: .7rem;
+    margin: 1rem;
 }
 
 .recipe{
     position: relative;
     border: 1px solid var(--border);
-    border-radius: .5em;
+    border-radius: .5rem;
     background-color: var(--secondary-background);
     overflow: hidden;
     box-shadow: 5px 5px 5px rgba(0,0,0,0.1);
 }
 
 .recipe-info{
-    padding: 1em;
+    padding: 1rem;
 }
 
 #created-by{
-    margin-right: 2em;
+    margin-right: 2rem;
 }
 
 .recipe-info h2{
-    margin-top: 0.5em;
+    margin-top: 0.5rem;
 }
 
 .recipe-actions{
     position: absolute;
-    bottom: 1em;
-    right: 1em;
+    bottom: 1rem;
+    right: 1rem;
 }
 
 .recipe-actions a {
@@ -67,8 +67,7 @@
     }
 
     .recipe-info{
-/*         flex-basis: 60rem; */
-        margin-left: 2em;
+        margin-left: 2rem;
     }
 }
 
