--- a/public/nav-footer.css
+++ b/public/nav-footer.css
@@ -34,7 +34,7 @@
     padding-inline: 1.5rem;
     height: 3rem;
     align-items: center;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 .link-text:hover {
