--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
 
     <ul class="flexcontainer-navbar" data-visible="false">
         <li class="nav-item">
-            <a href="/" class="nav-link">
+            <a href="/all-recipes" class="nav-link">
                 <span class="link-text">All Recipes</span>
             </a>
         </li>
