--- a/views/display-recipes.ejs
+++ b/views/display-recipes.ejs
@@ -10,6 +10,29 @@
                 <h1>
                     <%= title %>
                 </h1>
+                <div class="sort-search-bar">
+                    <div class="sort">
+                        <form id="form-sort" class="form" action="">
+                            <label for="sort">Sorting</label>
+                            <select name="sort" id="sort-dropdown" size="1" onchange="this.form.submit()">
+                                <option value="cDesc" <% if( typeof sorting.createdAt != 'undefined' && sorting.createdAt==-1 ){ %> selected <% } %>>Sort
+                                        by Creation Date (Desc)</option>
+                                <option value="cAsc">Sort by Creation Date (Asc)</option>
+                                <option value="rDesc">Sort by Rating (Desc)</option>
+                                <option value="rAsc">Sort by Rating (Asc)</option>
+                                <option value="pDesc">Sort by Popularity (Desc)</option>
+                            </select>
+                        </form>
+                    </div>
+                    <div class="search">
+                        <form id="form-search" class="form" action="">
+                            <input type="text" id="saerch" name="saerch">
+                            <button type="submit">
+                                SearchIcon
+                            </button>
+                        </form>
+                    </div>
+                </div>
 
                 <div class="grid-container-recipes">
                     <% let elements_per_page=2; let endindex=page * elements_per_page; let startindex=endindex -
@@ -17,60 +40,60 @@
                         <% if(recipes.length> 0) { %>
                             <% for(let i=startindex; i < endindex; i++) { %>
                                 <div class="recipe">
-                                        <a class="flex-container-recipe" href="/recipe/display/<%= recipes[i]._id %>">
-                                            <div class="recipe-image">
-                                                <img style="width: 100%; aspect-ratio: 1;"
-                                                    src="<%= recipes[i].image_link %>" alt="">
-                                            </div>
-                                            <div class="recipe-info">
-                                                <h2>
-                                                    <%= recipes[i].name %>
-                                                </h2>
-                                                <p>Rating: <%= recipes[i].rating %>
-                                                </p>
-                                                <p>Preparation Time: <span class="no-linebreak">
-                                                        <%= recipes[i].preparation_time %> min
-                                                    </span></p>
-                                                <p>Difficulty: <%= recipes[i].difficulty %>
-                                                </p>
-                                                <% if( typeof users !='undefined' ) { %>
-                                                    <% let username='"deleted user"' ; users.forEach(user=> {
-                                                        if(user._id ==
-                                                        recipes[i].created_by){ username = user.username}});%>
-                                                        <p id="created-by">Created by <%= username %>
-                                                        </p>
-                                                        <% } %>
-                                            </div>
-                                        </a>
-                                        <% if( typeof currentUser !='undefined' &&
-                                            recipes[i].created_by==currentUser.userid ) { %>
-                                            <div class="recipe-actions">
-                                                <a id="edit" href="/recipe/edit/<%= recipes[i]._id %>"></a>
-                                                <a id="delete" href="/recipe/delete/<%= recipes[i]._id %>"></a>
-                                            </div>
-                                            <% } %>
-                                                <% if( typeof currentUser !='undefined' && recipes[i].created_by
-                                                    !=currentUser.userid ) { %>
-                                                    <div class="recipe-actions">
-                                                        <% if( !currentUser.saved_recipes.includes(recipes[i]._id) ) {
-                                                            %>
-                                                            <a id="save" href="/recipe/save/<%= recipes[i]._id %>"></a>
-                                                            <% } else { %>
-                                                                <a id="unsave"
-                                                                    href="/recipe/unsave/<%= recipes[i]._id %>"></a>
-                                                                <% } %>
-                                                    </div>
+                                    <a class="flex-container-recipe" href="/recipe/display/<%= recipes[i]._id %>">
+                                        <div class="recipe-image">
+                                            <img style="width: 100%; aspect-ratio: 1;"
+                                                src="<%= recipes[i].image_link %>" alt="">
+                                        </div>
+                                        <div class="recipe-info">
+                                            <h2>
+                                                <%= recipes[i].name %>
+                                            </h2>
+                                            <p>Rating: <%= recipes[i].rating %>
+                                            </p>
+                                            <p>Preparation Time: <span class="no-linebreak">
+                                                    <%= recipes[i].preparation_time %> min
+                                                </span></p>
+                                            <p>Difficulty: <%= recipes[i].difficulty %>
+                                            </p>
+                                            <% if( typeof users !='undefined' ) { %>
+                                                <% let username='"deleted user"' ; users.forEach(user=> {
+                                                    if(user._id ==
+                                                    recipes[i].created_by){ username = user.username}});%>
+                                                    <p id="created-by">Created by <%= username %>
+                                                    </p>
                                                     <% } %>
+                                        </div>
+                                    </a>
+                                    <% if( typeof currentUser !='undefined' && recipes[i].created_by==currentUser.userid
+                                        ) { %>
+                                        <div class="recipe-actions">
+                                            <a id="edit" href="/recipe/edit/<%= recipes[i]._id %>"></a>
+                                            <a id="delete" href="/recipe/delete/<%= recipes[i]._id %>"></a>
+                                        </div>
+                                        <% } %>
+                                            <% if( typeof currentUser !='undefined' && recipes[i].created_by
+                                                !=currentUser.userid ) { %>
+                                                <div class="recipe-actions">
+                                                    <% if( !currentUser.saved_recipes.includes(recipes[i]._id) ) { %>
+                                                        <a id="save" href="/recipe/save/<%= recipes[i]._id %>"></a>
+                                                        <% } else { %>
+                                                            <a id="unsave"
+                                                                href="/recipe/unsave/<%= recipes[i]._id %>"></a>
+                                                            <% } %>
+                                                </div>
+                                                <% } %>
                                 </div>
                                 <% } %>
                 </div>
 
                 <div class="page-selector">
-                    <% endindex=Math.floor(recipes.length / elements_per_page); if(recipes.length
-                        % elements_per_page !=0){ endindex+=1 };%>
-                        <% for(let i=1; i <= endindex; i++) { %>
-                            <% let params={ "page": i, sorting}; %>
-                                <a <% if(i == page){ %>id="active-page"<% } %> href="./<%= JSON.stringify(params) %>"><%= i %></a>
+                    <% endindex=Math.floor(recipes.length / elements_per_page); if(recipes.length % elements_per_page
+                        !=0){ endindex+=1 };%>
+                        <% for(let i=1; i <=endindex; i++) { %>
+                            <% let params={ "page" : i, sorting}; %>
+                                <a <% if(i==page){ %>id="active-page"<% } %> href="./<%= JSON.stringify(params) %>"><%=
+                                                i %></a>
                                 <% } %>
                 </div>
 
