style sort and search for display-recipes

--- a/public/display-recipesStyle.css
+++ b/public/display-recipesStyle.css
@@ -1,7 +1,40 @@
+
+.sort-search-bar{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
 .grid-container-recipes{
     display: grid;
     gap: .7rem;
     margin: 1rem;
+}
+
+#sort-dropdown{
+    outline: 0;
+    border: none;
+    background-color: hsla(0, 0%, 100%, 0.3);
+    backdrop-filter: blur(6px);
+    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1);
+    padding: 0.5rem;
+    cursor: pointer;
+    font-size: 1rem;
+    width: 16rem;
+}
+
+.form input:focus{
+    outline: 0;
+}
+
+#search-input{
+    background: url(icons/search.svg) no-repeat;
+    background-size: 2rem;
+    background-position: right;
+    width: 16rem;
+    padding: 0.5rem;
 }
 
 .recipe{
@@ -71,7 +104,6 @@
     text-decoration: underline;
     color: rgb(23, 146, 64);
 }
-
 
 /* On screens that are 800px or more (TABLET/DESKTOP) */
 @media screen and (min-width: 800px) {
