--- a/views/display-recipes.ejs
+++ b/views/display-recipes.ejs
@@ -26,7 +26,7 @@
                         </form>
                     </div>
                     <div class="search">
-                        <form id="form-search" class="form" action="">
+                        <form id="form-search" class="form">
                             <input type="text" id="search-input" name="search" placeholder="Search for Recipe Name">
                             <input type="submit" hidden />
                         </form>
